...
        android:layout_margin="40dp"
        android:text="@string/add_category"
        android:textColor="@color/text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fragment_dialog_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
...
            android:layout_weight="1"
            android:background="@color/blue_light"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/fragment_dialog_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue_dark"
            android:text="@string/save"
            android:textSize="16sp" />
...
