<resources>
    <string name="app_name">"Forget Me Not "</string>
    <string name="categories">Categories</string>
    <string name="items">Items</string>
    <string name="alarm">Alarm</string>
    <string name="travel">Travel</string>
    <string name="work">Work</string>
    <string name="category_name">Category name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_category">Add category</string>
    <string name="add_item">Add item</string>
    <string name="item_name">Item name</string>
    <string name="empty_category_name">Unable to save category due to empty name.</string>
    <string name="empty_item_name">Unable to save item due to empty name.</string>
    <string name="delete_category_alert">Are you sure you want to delete this category?</string>
    <string name="delete_category_title">Delete category</string>
    <string name="category_exists">Category already exists.</string>
    <string name="deleting_category_failed">Deleting category failed.</string>
    <string name="delete">Delete</string>
    <string name="item_exists">Item already exists</string>
    <string name="deleting_item_failed">Deleting item failed.</string>
    <string name="feature_not_implemented">Feature not implemented yet</string>
    <string name="delete_item_alert">Are you sure you want to delete this item?</string>
    <string name="delete_item_title">Delete item</string>
    <string name="reminder">Reminder</string>
    <string name="invalid_date">The reminder cannot be set. Invalid date.</string>
    <string name="empty_item_list">To set an alarm you must have at least one item added.</string>
</resources>
